--- a/packages/bsky/package.json
+++ b/packages/bsky/package.json
@@ -73,7 +73,7 @@
   "devDependencies": {
     "@atproto/api": "workspace:^",
     "@atproto/lex-cli": "workspace:^",
-    "@atproto/pds": "workspace:^",
+    "@atproto/pds": "workspace:@mikekasprzak/pds@^",
     "@atproto/xrpc": "workspace:^",
     "@bufbuild/buf": "^1.28.1",
     "@bufbuild/protoc-gen-es": "^1.5.0",
