--- a/packages/pds/package.json
+++ b/packages/pds/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "prepare": "[ \"$npm_config_production\" = true ] || puppeteer browsers install chrome",
-    "codegen": "../../lexicon/generate.sh -cqV ../../dist ../../lexicon && lex gen-server --yes ./src/lexicon ../../dist/lexicons/com/atproto/*/* ../../dist/lexicons/app/bsky/*/* ../../dist/lexicons/chat/bsky/*/* ../../dist/lexicons/tools/ozone/*/* ../../dist/lexicons/org/w3/*/* ../../dist/lexicons/org/joinmastodon/*/*",
+    "codegen": "../../lexicons/generate.sh -qV ../../dist ../../lexicons && lex gen-server --yes ./src/lexicon ../../dist/lexicons/com/atproto/*/* ../../dist/lexicons/app/bsky/*/* ../../dist/lexicons/chat/bsky/*/* ../../dist/lexicons/tools/ozone/*/* ../../dist/lexicons/org/w3/*/* ../../dist/lexicons/org/joinmastodon/*/*",
     "build": "tsc --build tsconfig.build.json",
     "postbuild": "node ./build.templates.js",
     "dev": "node ./build.templates.js --watch",
