--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "verify:lint": "pnpm lint",
     "verify:types": "tsc --build tsconfig.json",
     "format": "pnpm lint:fix && pnpm style:fix",
+    "lexgen": "lexicons/generate.sh -c ./dist/lexicons ./lexicons",
     "precodegen": "pnpm run --recursive --stream --filter '@atproto/lex-cli...' build --force",
     "codegen": "pnpm run --sort --recursive --stream --parallel codegen",
     "build": "pnpm run --sort --recursive --stream '/^(build|build:.+)$/'",
