--- a/packages/ozone/package.json
+++ b/packages/ozone/package.json
@@ -16,7 +16,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "codegen": "ROOT=../.. && IN=$ROOT/dist/lexicons && $ROOT/lexicons/generate.sh -qV $IN $ROOT/lexicons && lex gen-server --yes ./src/lexicon $IN/com/atproto/*/* $IN/app/bsky/*/* $IN/chat/bsky/*/* $IN/tools/ozone/*/*",
+    "codegen": "ROOT=../..; IN=$ROOT/dist/lexicons; $ROOT/lexicons/generate.sh -qV $IN $ROOT/lexicons && lex gen-server --yes ./src/lexicon $IN/com/atproto/*/* $IN/app/bsky/*/* $IN/chat/bsky/*/* $IN/tools/ozone/*/*",
     "build": "tsc --build tsconfig.build.json",
     "start": "node --enable-source-maps dist/bin.js",
     "test": "../dev-infra/with-test-redis-and-db.sh jest",
