--- a/packages/pds/package.json
+++ b/packages/pds/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "prepare": "[ \"$npm_config_production\" = true ] || puppeteer browsers install chrome",
-    "codegen": "ROOT=../.. && IN=$ROOT/dist/lexicons && $ROOT/lexicons/generate.sh -qV $IN $ROOT/lexicons && lex gen-server --yes ./src/lexicon $IN/com/atproto/*/* $IN/app/bsky/*/* $IN/chat/bsky/*/* $IN/tools/ozone/*/* $IN/org/w3/*/* $IN/org/joinmastodon/*/*",
+    "codegen": "ROOT=../..; IN=$ROOT/dist/lexicons; $ROOT/lexicons/generate.sh -qV $IN $ROOT/lexicons && lex gen-server --yes ./src/lexicon $IN/com/atproto/*/* $IN/app/bsky/*/* $IN/chat/bsky/*/* $IN/tools/ozone/*/* $IN/org/w3/*/* $IN/org/joinmastodon/*/*",
     "build": "tsc --build tsconfig.build.json",
     "postbuild": "node ./build.templates.js",
     "dev": "node ./build.templates.js --watch",
