--- a/packages/pds/package.json
+++ b/packages/pds/package.json
@@ -77,23 +77,24 @@
   },
   "devDependencies": {
     "@atproto/api": "workspace:^",
+    "@atproto/bsky": "workspace:^",
     "@atproto/dev-env": "workspace:^",
     "@atproto/lex-cli": "workspace:^",
     "@atproto/oauth-client-browser-example": "workspace:*",
     "@atproto/pds-entryway": "npm:@atproto/pds@0.3.0-entryway.3",
     "@did-plc/server": "^0.0.1",
-    "@types/cors": "^2.8.18",
-    "@types/express": "^4.17.22",
-    "@types/express-serve-static-core": "^4.19.6",
-    "@types/nodemailer": "^6.4.17",
-    "@types/qs": "^6.14.0",
-    "esbuild": "^0.14.54",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/express-serve-static-core": "^4.17.36",
+    "@types/nodemailer": "^6.4.6",
+    "@types/qs": "^6.9.7",
+    "esbuild": "^0.14.48",
     "esbuild-plugin-handlebars": "^1.0.3",
     "get-port": "^6.1.2",
-    "jest": "^28.1.3",
-    "puppeteer": "^23.11.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "ws": "^8.18.2"
+    "jest": "^28.1.2",
+    "puppeteer": "^23.5.2",
+    "ts-node": "^10.8.2",
+    "typescript": "^5.6.3",
+    "ws": "^8.12.0"
   }
 }
